# mspr-coffee-erp-api

./: .env  .firebaserc  .gitignore  Cargo.toml  Dockerfile  README.md  build_rs_cov.profraw  clippy.toml  deny.toml  firebase.json  key.json  openapi.yml
.github/workflows/: audit.yaml  build.yaml
configuration/: base.yaml  local.yaml  production.yaml
coverage/: cobertura.xml  covertura.xml
import/: import-products.json
infrastructure/: gateway.sh  gateway.yaml  gcp_resources.tf  github_sa.sh  update_gateway.sh
infrastructure/scripts/: gcp_bucket.sh  github_sa.sh  openapi.yaml  step_before_terraform.sh  update-gateway.sh
infrastructure/terraform/: main2.tf  step_before_terraform.sh
infrastructure/terraform/api/: variables.tf
infrastructure/terraform/apis/: .terraform.lock.hcl  backend.tf  main.tf  terraform.tfvars  variables.tf
infrastructure/terraform/dev/: .terraform.lock.hcl  backend.tf  main.tf  output.tf  variables.tf
infrastructure/terraform/modules/apis/: main.tf  variables.tf
infrastructure/terraform/modules/gateway/: main.tf  output.tf  variables.tf
infrastructure/terraform/modules/ressources/: main.tf  output.tf  variables.tf
infrastructure/terraform/ressources/: backend.tf  output.tf  variables.tf
infrastructure/terraform/test/: main.tf  spec.yaml  terraform.tfstate  terraform.tfstate.backup  variables.tf
scripts/: copy_struct.sh  git_update.sh
src/: configuration.rs  lib.rs  main.rs  startup.rs  tcp_sink.rs  telemetry.rs
src/cli/: main.rs
src/entity/: firebase_user.rs  mod.rs  pagination.rs  product.rs  reseller.rs  user.rs
src/error/: api_error.rs  error.rs
src/observability/: mod.rs  tcp_sink.rs  telemetry.rs
src/repository/: mod.rs  products.rs  resellers.rs  users.rs
src/routes/: health_check.rs  mod.rs  products.rs
tests/api/: health_check.rs  helpers.rs  main.rs  products.rs
