[package]
name = "erp_api"
version = "0.1.0"
edition = "2021"

[lib]
path = "src/lib.rs"

[[bin]]
path = "src/main.rs"
name = "erp"

[dev-dependencies]
tokio = { version = "1.25.0", features = ["rt", "macros"] }
uuid = { version = "1.3.0", features = ["v4"] }
once_cell = "1.17.1"
reqwest = { version = "0.11.14", default-features = false, features = ["json", "rustls-tls"] }

[dependencies]
actix-web = "4.3.0"
tokio = { version = "1.25.0", features = ["macros", "rt-multi-thread"] }
serde = { version = "1.0.152", features = ["derive"]}
config = "0.11"
tracing = { version = "0.1.37", features = ["log"] }
tracing-subscriber = { version = "0.3.16", features = ["registry", "env-filter"] }
tracing-bunyan-formatter = "0.3.6"
tracing-log = "0.1.3"
tracing-actix-web = "0.7.2"
serde-aux = "4.1.2"
secrecy = { version = "0.8.0", features = ["serde"] }
